--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <!-- Adding google font ROBOTO 500  -->
+  <!-- Adding google font ROBOTO flex 500  -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Licorice&family=Poppins:wght@500&display=swap" rel="stylesheet">
+
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
